<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSI_week_1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="bounty">Bounty</string>

    <string name="vname">Horatio</string>
    <string name="vage">48</string>
    <string name="vgender">Male</string>
    <string name="vbounty">$50.000</string>

    <string name="img_desc">Image description</string>

    <string name="details">Details</string>
    <string name="suspectDetails">Deze man wordt gezocht.Deze man wordt gezocht.Deze man wordt gezocht.Deze man wordt gezocht.Deze man wordt gezocht.Deze man wordt gezocht.Deze man wordt gezocht.</string>

</resources>
