<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitCenter"
        android:id="@+id/imageView"
        android:contentDescription="@string/img_desc"
        android:src="@drawable/csimiami" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2">

            <TableRow
                android:background="@android:color/holo_green_dark"
                android:layout_margin="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/name"
                    android:id="@+id/tvName" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/vname"
                    android:id="@+id/tvNameDetails" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/holo_green_dark"
                android:layout_margin="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/gender"
                    android:id="@+id/tvGender" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/gender"
                    android:id="@+id/tvGenderDetails" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/holo_green_dark"
                android:layout_margin="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/age"
                    android:id="@+id/tvAge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/vage"
                    android:id="@+id/tvAgeDetails" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/holo_green_dark"
                android:layout_margin="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bounty"
                    android:id="@+id/tvBounty" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/vbounty"
                    android:id="@+id/tvBountyDetails" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/details"
                android:id="@+id/tvDetails" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:id="@+id/scrollView" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/suspectDetails"
                        android:id="@+id/tvSuspectDetails" />
                </LinearLayout>
            </ScrollView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Report"
                android:id="@+id/btnReport"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>